<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="aayush.programmingquiz.MainActivity"
    android:background="@mipmap/code2">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="67dp"
        android:text="@string/app_name"
        android:background="#8cffffff"
        android:textAlignment="center"
        android:textColor="#333"
        android:paddingTop="10dp"
        android:textSize="30dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="86dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/start"
        android:layout_width="202dp"
        android:layout_height="63dp"
        android:layout_marginBottom="178dp"
        android:background="#8cffffff"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/start"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <Button
        android:id="@+id/previousResults"
        android:layout_width="202dp"
        android:layout_height="63dp"
        android:layout_marginBottom="96dp"
        android:background="#8cffffff"
        android:paddingBottom="20dp"
        android:paddingTop="20dp"
        android:text="@string/previous"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />
</android.support.constraint.ConstraintLayout>
