<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49536d"
    tools:context="aayush.programmingquiz.quiz">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1"
        android:id="@+id/linearLayout"
        android:weightSum="1">

        <Button
            android:id="@+id/mainMenu"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:text="@string/menu" />

        <Button
            android:id="@+id/score"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="textEnd"
            android:paddingRight="30dp"
            android:text="@string/score" />

    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#c1cdcd"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="9dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="20dp"
            android:paddingStart="20dp"
            android:paddingRight="10dp"
            android:paddingTop="20dp"
            android:text="@string/Question"
            android:textSize="20sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            tools:layout_constraintRight_creator="1"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toBottomOf="@+id/option1"
            android:layout_marginBottom="48dp" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/option1"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:background="#5cffffff"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="Button"
            android:textSize="18sp"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/option2"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintBottom_creator="1" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/option2"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="12dp"
            android:text="Button"
            android:background="#5cffffff"
            android:paddingStart="10dp"
            android:textSize="18sp"
            android:textAlignment="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            tools:layout_constraintBottom_creator="1"
            app:layout_constraintBottom_toTopOf="@+id/option3"
            android:layout_marginStart="16dp" />

        <Button
            android:textAllCaps="false"
            android:id="@+id/option3"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_marginBottom="10dp"
            android:text="Button"
            android:textAlignment="textStart"
            android:background="#5cffffff"
            android:paddingStart="10dp"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="16dp"
            app:layout_constraintVertical_bias="0.534" />

        <Button
            android:id="@+id/dontKnow"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="#5cffffff"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/dontKnow"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option3"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1"
            app:layout_constraintVertical_bias="0.59"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="19dp"
            android:layout_marginEnd="19dp"
            tools:layout_constraintLeft_creator="1" />

        <Button
            android:id="@+id/option4"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="16dp"
            android:background="#5cffffff"
            android:paddingBottom="5dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="Button"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/option3"
            app:layout_constraintVertical_bias="0.082"
            tools:layout_constraintBottom_creator="1"
            tools:layout_constraintTop_creator="1" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
